# ChangeLog for www-apps/phpsysinfo
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/phpsysinfo/ChangeLog,v 1.39 2007/09/02 15:03:28 corsair Exp $

  02 Sep 2007; Markus Rothe <corsair@gentoo.org> phpsysinfo-2.5.4.ebuild:
  Stable on ppc64; bug #186931

  01 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  phpsysinfo-2.5.4.ebuild:
  ppc stable, bug #186931

  31 Aug 2007; Christoph Mende <angelos@gentoo.org> phpsysinfo-2.5.4.ebuild:
  Stable on amd64 wrt security bug #186931

  31 Aug 2007; Raúl Porcel <armin76@gentoo.org> phpsysinfo-2.5.4.ebuild:
  alpha/x86 stable wrt security #186931

  31 Aug 2007; Jeroen Roovers <jer@gentoo.org> phpsysinfo-2.5.4.ebuild:
  Stable for HPPA (bug #186931).

*phpsysinfo-2.5.4 (30 Aug 2007)

  30 Aug 2007; <wrobel@gentoo.org> +phpsysinfo-2.5.4.ebuild:
  phpsysinfo version bump to 2.5.4 because of security issue #186931.

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  phpsysinfo-2.5.3.ebuild:
  Stable on sparc

*phpsysinfo-2.5.3 (26 May 2007)

  26 May 2007; Renat Lumpau <rl03@gentoo.org> +phpsysinfo-2.5.3.ebuild:
  Version bump, bugs 171874 and #176055.

  26 May 2007; Renat Lumpau <rl03@gentoo.org> -phpsysinfo-2.5.1-r2.ebuild:
  Clean out old version

  14 May 2007; Raúl Porcel <armin76@gentoo.org> phpsysinfo-2.5.2.ebuild:
  alpha stable wrt #169782

  15 Mar 2007; Simon Stelling <blubb@gentoo.org> phpsysinfo-2.5.2.ebuild:
  stable on amd64; bug 169782

  12 Mar 2007; Markus Rothe <corsair@gentoo.org> phpsysinfo-2.5.2.ebuild:
  Stable on ppc64; bug #169782

  09 Mar 2007; Jeroen Roovers <jer@gentoo.org> phpsysinfo-2.5.2.ebuild:
  Stable for HPPA (bug #169782).

  09 Mar 2007; nixnut <nixnut@gentoo.org> phpsysinfo-2.5.2.ebuild:
  Stable on ppc wrt bug 169782

  08 Mar 2007; Raúl Porcel <armin76@gentoo.org> phpsysinfo-2.5.2.ebuild:
  x86 stable wrt bug 169782

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  phpsysinfo-2.5.2.ebuild: