@@ -1,3 +1,0 @@
-MD5 89bbfd1e84319fd17521af13368fe99c phpsysinfo-2.5.2.tar.gz 219378
-RMD160 426bf61af50f33bac3cdc4aab2f5a4e6e3b87516 phpsysinfo-2.5.2.tar.gz 219378
-SHA256 18942771580f7adccd95d3bc308637a23a0dad57dee5d136014ea28f46fb7eea phpsysinfo-2.5.2.tar.gz 219378
