@@ -1,3 +1,0 @@
-MD5 61a398032b5bb15b0a242cf180a34411 phpsysinfo-2.5.3.tar.gz 267915
-RMD160 0cdc46ba361f517173d7a4ecd614d67182b640c1 phpsysinfo-2.5.3.tar.gz 267915
-SHA256 33768d2354f44dfbbb53711e6732785de27e96a1a19c2f97e5f59d3e37149400 phpsysinfo-2.5.3.tar.gz 267915
