@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/phpsysinfo
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/phpsysinfo/ChangeLog,v 1.39 2007/09/02 15:03:28 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/phpsysinfo/ChangeLog,v 1.40 2007/09/04 12:59:52 wrobel Exp $
+
+  04 Sep 2007; <wrobel@gentoo.org> -phpsysinfo-2.5.2.ebuild,
+  -phpsysinfo-2.5.3.ebuild:
+  Removed insecure versions (#186931).
 
   02 Sep 2007; Markus Rothe <corsair@gentoo.org> phpsysinfo-2.5.4.ebuild:
   Stable on ppc64; bug #186931
